# machine-learning-zoomcamp

./: .gitignore  README.md  pyproject.toml
01-intro/homework/: homework_01.ipynb
