[project]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = "Personal assignments and solutions for the Machine Learning Zoomcamp course by DataTalks.Club"
authors = [
    { name = "Shivam Kumar", email = "kumar.shivam.jarvis@gmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "ipython>=8.29.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
